[gd_scene load_steps=6 format=3 uid="uid://ddd6dpxasgawl"]

[ext_resource type="Script" uid="uid://dgnmkh4uwid4o" path="res://hoverboard_script.gd" id="1_yvgsq"]
[ext_resource type="PackedScene" uid="uid://c4eddbn7u1bf7" path="res://board.glb" id="2_g28gv"]
[ext_resource type="Script" uid="uid://bbiw0so0sst5x" path="res://sprung_camera.gd" id="3_g28gv"]

[sub_resource type="BoxShape3D" id="BoxShape3D_colhj"]
size = Vector3(0.254715, 0.0462646, 1.50574)

[sub_resource type="SphereMesh" id="SphereMesh_0wftd"]

[node name="HoverBoard" type="Node3D"]

[node name="BoardController" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.9996, -0.0282706, 0, 0.0282706, 0.9996, 0, 0, 0)
collision_layer = 2
slide_on_ceiling = false
wall_min_slide_angle = 0.0
floor_stop_on_slope = false
floor_max_angle = 1.5708
floor_snap_length = 0.2
script = ExtResource("1_yvgsq")

[node name="Board" parent="BoardController" instance=ExtResource("2_g28gv")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BoardController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000637174, 0.067688, 0.00518799)
shape = SubResource("BoxShape3D_colhj")

[node name="RemoteTransformFL" type="RemoteTransform3D" parent="BoardController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, 0.02, -0.65)
remote_path = NodePath("../RayCastFL")

[node name="RemoteTransformFR" type="RemoteTransform3D" parent="BoardController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05, 0.02, -0.65)
remote_path = NodePath(".")

[node name="RemoteTransformBL" type="RemoteTransform3D" parent="BoardController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, 0.02, 0.65)
remote_path = NodePath(".")
update_rotation = false

[node name="RemoteTransformBR" type="RemoteTransform3D" parent="BoardController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05, 0.02, 0.65)
remote_path = NodePath(".")

[node name="CameraPivot" type="Node3D" parent="BoardController"]

[node name="CameraTargetPosition" type="Node3D" parent="BoardController/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.999603, 0.0281659, 0, -0.0281659, 0.999603, 0, 0.659943, 1.66451)

[node name="SprungCamera" type="Camera3D" parent="BoardController/CameraPivot/CameraTargetPosition"]
transform = Transform3D(1, 0, 0, 0, 1, -3.72529e-09, 0, 1.86265e-09, 1, 0, 0, 0)
script = ExtResource("3_g28gv")

[node name="RayCastFL" type="RayCast3D" parent="BoardController" groups=["raycasts"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, 0.02, -0.65)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BoardController/RayCastFL"]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
mesh = SubResource("SphereMesh_0wftd")

[node name="RayCastFR" type="RayCast3D" parent="BoardController" groups=["raycasts"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05, 0.02, -0.65)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BoardController/RayCastFR"]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
mesh = SubResource("SphereMesh_0wftd")

[node name="RayCastBL" type="RayCast3D" parent="BoardController" groups=["raycasts"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, 0.02, 0.65)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BoardController/RayCastBL"]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
mesh = SubResource("SphereMesh_0wftd")

[node name="RayCastBR" type="RayCast3D" parent="BoardController" groups=["raycasts"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05, 0.02, 0.65)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BoardController/RayCastBR"]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
mesh = SubResource("SphereMesh_0wftd")
